WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291976
[macOS] Vertical search fields should not always use textfield appearance
https://bugs.webkit.org/show_bug.cgi?id=291976
Summary
[macOS] Vertical search fields should not always use textfield appearance
Lily Spiniolas
Reported
2025-04-23 14:10:42 PDT
rdar://149888013
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-04-23 14:13:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44437
EWS
Comment 2
2025-04-23 19:30:36 PDT
Committed
294034@main
(7dccf76260a6): <
https://commits.webkit.org/294034@main
> Reviewed commits have been landed. Closing PR #44437 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug