[macOS] Vertical search fields should not always use textfield appearance https://bugs.webkit.org/show_bug.cgi?id=291976 rdar://149888013

Reviewed by Abrar Rahman Protyasha and Aditya Keerthi.

Previously, when a search field was in a vertical writing mode, we
would set its appearance to a textfield in order to display the
control properly. This is no longer necessary when vector-based
controls are enabled, so skip the check when the setting is enabled.

* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustStyle):
* Source/WebCore/rendering/RenderTheme.h:
(WebCore::RenderTheme::searchFieldShouldAppearAsTextField const):
* Source/WebCore/rendering/mac/RenderThemeMac.h:
* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::RenderThemeMac::searchFieldShouldAppearAsTextField const):

Canonical link: https://commits.webkit.org/294034@main